--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
         <div class="footer-soc-container">
           <h3 class="footer-soc-title header-title">Social media</h3>
           <ul class="footer-soc-list list">
+
             <li class="footer-soc-item">
               <a href="" class="footer-soc-link link">
                 <svg class="footer-soc-icon" width="24" height="24">
@@ -464,8 +465,27 @@
             </li>
           </ul>
         </div>
+
+<!-- Subscribe to the website-->
+
+        <div class="subscribe-box ">
+          <p class="subscribe-title header-title">Subscribe</p>
+          <form class="subscribe-form">
+            <input
+              class="subscribe-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+            />
+            <button class="subscribe-submit button" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
-      f
     </footer>
 
         <!------- MODAL WINDOW ------>
@@ -476,10 +496,97 @@
                 <use href="./images/icons.svg#icon-vector-2"></use>
               </svg>
             </button>
+            <p class="modal-title header-title">Leave your contacts and we will call you back</p>
+            <form action="#" class="modal-form">
+
+              <div class="modal-field">
+                <label for="user" class="modal-input-text input-text">Name</label>
+                <div class="input-wrap">
+                  <input 
+                  type="text" 
+                  class="modal-input" 
+                  name="user-name"
+                  id="user"
+                  minlength="2" 
+                  maxlength="25" 
+                  required
+                  />
+                  <svg class="modal-input-icon" width="18" height="18">
+                    <use href="./images/icons.svg#icon-person"></use>
+                  </svg>
+                </div>
+              </div>
+
+              <div class="modal-field">
+                <label for="tel" class="modal-input-text input-text">Phone</label>
+                <div class="input-wrap">
+                  <input 
+                  type="tel" 
+                  class="modal-input" 
+                  name="user-tel"
+                  id="tel" 
+                  minlength="7" 
+                  maxlength="13" 
+                  required
+                  />
+                  <svg class="modal-input-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-phone"></use>
+                  </svg>
+                </div>
+              </div>
+
+              <div class="modal-field">
+                <label for="email" class="modal-input-text input-text">Email</label>
+                <div class="input-wrap">
+                  <input 
+                  type="email" 
+                  class="modal-input" 
+                  name="user-email" 
+                  id="email" 
+                  minlength="5" 
+                  required
+                  />
+                  <svg class="modal-input-icon" width="18" height="24">
+                    <use href="./images/icons.svg#icon-email"></use>
+                  </svg>
+                </div>
+              </div>
+
+              <div class="modal-field">
+                <label class="modal-input-text input-text" for="user-comment">Comment</label
+                  >
+                  <textarea 
+                  name="user-text" 
+                  id="user-comment" 
+                  placeholder="Text input"
+                  class="modal-comment"
+                  ></textarea>
+
+              <div class="modal-field">
+                <input 
+                type="checkbox" 
+                id="policy" 
+                name="policy" 
+                value="true" 
+                class="modal-check visually-hidden" 
+                required
+                />
+                <label 
+                for="policy" 
+                class="check-text input-text">
+                <span>
+                  <svg class="check-icon" width="10" height="8">
+                    <use href="./images/icons.svg#icon-check"></use>
+                  </svg>
+                </span>
+                I accept the terms and conditions of the&nbsp;<a href="" class="privacy-policy input-text">Privacy Policy</a></label>  
+              </div>
+
+              <button type="submit" class="mdl-button button input-button">Send</button>
+            </form>
           </div>
 
     <script src="./js/modal.js"></script>
   </body>
 </html>
-
 
